# rust-magic-sys

./: .gitattributes  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  deny.toml  external-types.toml  rust-toolchain.toml  shell.nix
.github/: libmagic-version-to-crate-feature.sh  libmagic-version-to-shasum.sh  renovate.json5
.github/actions/setup-libmagic/: action.yml
.github/actions/vcpkg-files-cache/: action.yml
.github/workflows/: build-extra.yml  build.yml  conventional-commits.yml  deny.yml  docs.yml  external-types.yml  lint.yml  linux.yml  mac.yml  minver.yml  msrv.yml  release-plz.yml  test-libmagic-version.yml  windows.yml  zizmor.yml
nix/: rust.nix  sources.json
src/: lib.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
