[package]
name = "magic-sys"
description = "Declarations for the `libmagic` C library"
keywords = [
    "magic",
    "file",
    "ffi",
    "bindings",
]
categories = [
    "external-ffi-bindings",
]
repository = "https://github.com/robo9k/rust-magic-sys.git"
license = "MIT/Apache-2.0"
version = "0.2.1"
authors = ["robo9k <robo9k@symlink.io>"]
links = "magic"
exclude = [
    ".gitignore",
    ".gitattributes",
    "/.github/",
    "/.vscode/",
    "rust-toolchain.toml",
    "shell.nix",
    "nix/",
]
rust-version = "1.38"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["v5-38"]
v5-04 = []
v5-05 = ["v5-04"]
v5-10 = ["v5-05"]
v5-13 = ["v5-10"]
v5-20 = ["v5-13"]
v5-21 = ["v5-20"]
v5-22 = ["v5-21"]
v5-23 = ["v5-22"]
v5-25 = ["v5-23"]
v5-27 = ["v5-25"]
v5-32 = ["v5-27"]
v5-35 = ["v5-32"]
v5-38 = ["v5-35"]
v5-40 = ["v5-38"]

[dependencies]
libc = "0.2.13"

[build-dependencies]
vcpkg = "0.2.15"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "078f3e5"
dependencies = ["libmagic"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[package.metadata]
msrv = "1.38.0"

[package.metadata.docs.rs]
all-features = true
targets = []
