[package]
name = "magic-sys"
description = "Declarations for the `libmagic` C library"
keywords = [
    "magic",
    "file",
    "ffi",
    "bindings",
]
categories = [
    "external-ffi-bindings",
    "no-std",
]
repository = "https://github.com/robo9k/rust-magic-sys.git"
license = "MIT/Apache-2.0"
version = "0.3.0"
authors = ["robo9k <robo9k@symlink.io>"]
links = "magic"
exclude = [
    ".gitignore",
    ".gitattributes",
    "/.github/",
    "/.vscode/",
    "rust-toolchain.toml",
    "shell.nix",
    "nix/",
    "deny.toml",
]
rust-version = "1.54"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["pkg-config", "vcpkg"]
# the "default" version feature would be v5-39, but that's API-wise the same as v5-38
v5-40 = []

[build-dependencies]
pkg-config = { version = "0.3.27", optional = true }
vcpkg = { version = "0.2.15", optional = true }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "9edb1b8e590cc086563301d735cae4b6e732d2d2" # 2023.08.09
dependencies = ["libmagic"]

[dependencies.libc]
version = "0.2.104"
default-features = false

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[package.metadata]
msrv = "1.54.0"

[package.metadata.docs.rs]
all-features = true
targets = []
