[package]
name = "magic-sys"
description = "Declarations for the `libmagic` C library"
keywords = [
    "magic",
    "file",
    "ffi",
    "bindings",
]
categories = [
    "external-ffi-bindings",
    "no-std",
]
repository = "https://github.com/robo9k/rust-magic-sys.git"
license = "MIT/Apache-2.0"
version = "0.3.0"
authors = ["robo9k <robo9k@symlink.io>"]
links = "magic"
exclude = [
    ".gitignore",
    ".gitattributes",
    "/.github/",
    "/.vscode/",
    "rust-toolchain.toml",
    "shell.nix",
    "nix/",
    "deny.toml",
]
edition = '2021'
rust-version = "1.64"

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["pkg-config", "vcpkg"]
## Enable `libmagic` v5.40 API
v5-40 = []

[build-dependencies]
## Enable build using `pkg-config`
pkg-config = { version = "0.3.27", optional = true }
## Enable build using `vcpkg`
vcpkg = { version = "0.2.15", optional = true }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "a0f974c66a1c56e974d37b5707e312742aead974" # https://github.com/microsoft/vcpkg/pull/43635
dependencies = ["libmagic"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[package.metadata]
msrv = "1.64.0"

[package.metadata.docs.rs]
targets = []
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
