[package]
name = "systest"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[features]
v5-40 = ["magic-sys/v5-40"]
v5-44 = ["magic-sys/v5-44"]
v5-45 = ["magic-sys/v5-45"]
v5-46 = ["magic-sys/v5-46"]

[dependencies]
libc = "0.2"
magic-sys = { path = ".." }

[build-dependencies]
ctest = "0.5"
